pyglet 1.5.5
Bugfix and minor improvement release

Bugfixes
--------
- GStreamer decoder clamped to 16bit sample width, since OpenAL does not support anything higher.

Improvements
------------
- shapes module: added `Circle.rotation` property and blending to standalone shape `draw` methods.
- shapes module: added missing `delete` and `__del__` methods.


pyglet 1.5.4
Bugfix and minor feature release

Bugfixes
--------
- Avoid WMFDecoder crash when mixing pyglet with other tookits. (#174)
- Prevent EventDispatcher subclasses from hiding AttributeError exceptions.

Improvements
------------
- Added `pyglet.graphics.shapes` module for creating simple 2D shapes.


pyglet 1.5.3
Bugfix release

Bugfixes
--------
- Fix memory leak caused by not freeing stale buffers and textures.


pyglet 1.5.2
Bugfix and minor feature release

Bugfixes
--------
- Fix WMF decoder for pre-Windows 8 systems.
- Fix WMF decoder loading from file-like objects for Windows Vista.
- Fix WMF decoder crashing when attempting to seek past file duration.

Changes
-------
- Allow GStreamer and FFmpeg decoder to load from file-like objects.


pyglet 1.5.1
Bugfix and minor feature release

Bugfixes
--------
- Fix issue with changing Label positions by fractional values.
- Avoid performance issue due to unnecessary context switching with single Window programs.
- Fix crash on Player.next_source when playing a video with no audio track.
- Fix crash when disconnecting a Joystick on Windows.
- Prevent media Players from seeking to negative timestamps.
- Fix OpenAL audio driver not dispatching events.

Changes
--------
- text.TextLayouts are no longer bound to int positioning.
- Raise exception if attempting to import from legacy Python.
- Add GStreamer decoder for compressed audio on Linux.
- Add Windows Media Foundation decoder for compressed audio on Windows.

Improvements
------------
- New "file_drops" Window argument to allow drag and drop of files. This is complimented