@@ -61,12 +61,15 @@ NSImage = cocoapy.ObjCClass('NSImage')
 quartz = cocoapy.quartz
 cf = cocoapy.cf
 
+
 class CocoaMouseCursor(MouseCursor):
-    drawable = False
+    gl_drawable = False
+
     def __init__(self, cursorName):
         # cursorName is a string identifying one of the named default NSCursors
         # e.g. 'pointingHandCursor', and can be sent as message to NSCursor class.
         self.cursorName = cursorName
+
     def set(self):
         cursor = getattr(NSCursor, self.cursorName)()
         cursor.set()
@@ -517,9 +520,9 @@ class CocoaWindow(BaseWindow):
             elif isinstance(self._mouse_cursor, CocoaMouseCursor):
                 self._mouse_cursor.set()
                 SystemCursor.unhide()
-            # If the mouse cursor is drawable, then it we need to hide
+            # If the mouse cursor is OpenGL drawable, then it we need to hide
             # the system mouse cursor, so that the cursor can draw itself.
-            elif self._mouse_cursor.drawable:
+            elif self._mouse_cursor.gl_drawable:
                 SystemCursor.hide()
             # Otherwise, show the default cursor.
             else:
